--- a/Estilos.css
+++ b/Estilos.css
@@ -6,13 +6,14 @@
   background-color: rgb(21, 46, 126);
   text-align: center;
   font-weight: bold;
-  padding: 10px;
+  padding: 15px;
 }
 #derechacol {
   background-color: rgb(255, 255, 255);
   text-align: center;
   font-weight: bold;
   padding: 10px;
+  padding-left: 20px;
 }
 .alingi {
   text-align: left;
